# devrel-demos

./: .gitignore  CONTRIBUTING.md  README.md  Spark_Data_Science.ipynb
_archive/: README.md
agents/accelerate-ai-with-cloud-run/accelerate-ai-lab3-starter/adk-agent/: Dockerfile  elasticity_test.py  pyproject.toml
agents/aicamp/: .gitignore  main.py  pyproject.toml  setup.sh
agents/aicamp/aida_v1/: agent.py
agents/aicamp/aida_v2/: agent.py  queries_rag.py  schema_rag.py
agents/aicamp/aida_v3/: agent.py  queries_rag.py  schema_rag.py
agents/aicamp/aida_v4/: agent.py  queries_rag.py  schema_rag.py
agents/aicamp/aida_v5/: agent.py
agents/aicamp/static/: script.js  style.css
agents/aicamp/templates/: index.html
agents/aida/: .gitignore  GEMINI.md  README.md  clean.sh  ingest_osquery.py  ingest_packs.py  main.py  pyproject.toml  reproduce.py  setup.sh
agents/aida/aida/: agent.py  queries_rag.py  schema_rag.py
agents/aida/design/: ui_proposals.md
agents/aida/static/: script.js  style.css
agents/aida/templates/: index.html
agents/aida/tests/: test_aida_core.py  test_query_lib.py  test_search.py
agents/multi-agent-system/app/: main.py  pyproject.toml
agents/multi-agent-system/app/frontend/: course.html  style.css
agents/workflow-dynamic/: .gitignore  Dockerfile  README.md  agents-cli-manifest.yaml  pyproject.toml
agents/workflow-dynamic/app/: agent.py  fast_api_app.py
agents/workflow-dynamic/app/app_utils/: telemetry.py  typing.py
agents/workflow-dynamic/assets/: workflow.mermaid
ai-ml/book-finder-agent-evaluation/: README.md  pyproject.toml
ai-ml/book-finder-agent-evaluation/book-finder/: agent.py  eval.test.json  evalset0d65f3.evalset.json  evalset3d1045.evalset.json  test_config.json
ai-ml/book-finder-agent-evaluation/book-finder/.adk/eval_history/: book-finder_book_finder_eval_1756222394.070815.evalset_result.json  book-finder_book_finder_eval_1756227840.3473852.evalset_result.json  book-finder_book_finder_eval_from_trace_1756228227.645521.evalset_result.json  (+4 more)
ai-ml/dev-signal/: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  test_local.py  uv.toml
ai-ml/dev-signal-agent/: .env.example  Dockerfile  GEMINI.md  Makefile  README.md  blog_part_1_building.md  blog_part_2_deployment.md  blog_part_3_memory.md  cloudbuild.yaml  fetch_logs.py  inspect_mcp.py  pyproject.toml  test_memory_local.py
ai-ml/dev-signal-agent/.github/workflows/: deploy.yml
ai-ml/dev-signal-agent/deployment/terraform/: main.tf  provider.tf  terraform.tfvars  variables.tf  wif.tf
ai-ml/dev-signal-agent/dev_signal_agent/: agent.py  fast_api_app.py
ai-ml/dev-signal-agent/dev_signal_agent/app_utils/: env.py  telemetry.py  typing.py
ai-ml/dev-signal-agent/dev_signal_agent/tools/: mcp_config.py
ai-ml/dev-signal/.agent/skills/: README.md
ai-ml/dev-signal/deployment/terraform/: bucket_fix_apply.txt  main.tf  plan_output.txt  provider.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
ai-ml/dev-signal/dev_signal_agent/: agent.py  fast_api_app.py
ai-ml/dev-signal/dev_signal_agent/.adk/: session.db
ai-ml/dev-signal/dev_signal_agent/app_utils/: env.py  telemetry.py  typing.py
ai-ml/dev-signal/dev_signal_agent/tools/: mcp_config.py
ai-ml/gemma-ollama-app-streamlit/: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  settings.yaml.example
ai-ml/gemma-ollama-app-streamlit/ollama-cloudrun-deploy/: Dockerfile  README.md
ai-ml/multi-agent-orchestra/music-production-loop-agent/: music_production_loop_agent.py  pyproject.toml
ai-ml/multi-agent-orchestra/root-agent/: pyproject.toml  root_agent.py
ai-ml/music-education-a2a/: .env-template  README.md  main.py  pyproject.toml
ai-ml/music-education-a2a/historical_context_agent/: agent.py
ai-ml/music-education-a2a/history_agent/: Dockerfile  __init__.py  a2a_utils.py  agent.py  pyproject.toml  run_a2a.py  tools.py  utils.py
ai-ml/music-education-a2a/music_ed_agent/: Dockerfile  agent.py  auth_utils.py  pyproject.toml  tools.py
ai-ml/python-tutor/: README.md  pyproject.toml  pythontutor_sessions.db
ai-ml/python-tutor/python-tutor-long-term/: agent.py  memory_tools.py
ai-ml/python-tutor/python-tutor-short-term/: agent.py
ai-ml/python-tutor/python_tutor_core/: agent_utils.py  prompts.py
ai-ml/python-tutor/python_tutor_long_term/: .ae_ignore  .agent_engine_config.json  agent.py  memory_tools.py
ai-ml/python-tutor/python_tutor_short_term/: .agent_engine_config.json  agent.py  python_tutor_core
ai-ml/python-tutor/tools/: tools.py
app-dev/video-to-blog/blog_refiner/: pyproject.toml
app-dev/video-to-blog/blog_refiner/blog_refiner/: __init__.py  critic_agent.py  root_agent.py  updater_agent.py
codelabs/ai-toolkit-lab-2/hackathon-judge/agent/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
codelabs/ai-toolkit-lab-2/hackathon-judge/agent-sandbox/: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
codelabs/gke-knowledge-graph/: .gitignore  README.md  pyproject.toml
codelabs/gke-knowledge-graph/producer/: Dockerfile  producer.py  requirements.txt
codelabs/gke-knowledge-graph/scripts/: create_tables.sql  deploy.sh  setenv.sh  setup.sh
codelabs/gke-knowledge-graph/templates/: job-producer-template.yaml  job-worker-template.yaml
codelabs/gke-knowledge-graph/worker/: Dockerfile  manual_test.py  process_file.py  requirements.txt  worker.py
codelabs/gke-knowledge-graph/worker/processor/: audio_processor.py  bigquery_writer.py  csv_processor.py  image_processor.py  video_processor.py
codelabs/gke-knowledge-graph/worker/tests/: test_audio_processor.py  test_csv_processor.py  test_image_processor.py  test_video_processor.py
data-analytics/adk_fastapi_with_bq_plugin/: .env.example  README.md  custom_plugin.py  main.py  pyproject.toml
data-analytics/adk_fastapi_with_bq_plugin/chatbot_agent/: __init__.py  agent.py
infrastructure/cymbal-toy-store/backend/: .gitignore  pyproject.toml
infrastructure/cymbal-toy-store/backend/tests/: __init__.py
(+3168 files in other folders)
