[project]
name = "aicamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "google-adk>=1.22.1",
    "huggingface-hub>=1.3.2",
    "litellm>=1.81.1",
    "sqlite-rag>=0.1.4",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
