[project]
name = "aida"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "google-adk>=1.19.0",
    "litellm>=1.80.7",
    "sqlite-rag>=0.1.4",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "huggingface_hub",
    "google-genai",
    "coverage",
]
