[project]
name = "book-recommendations-agent-eval"
version = "0.1.0"
description = "Recommends books and searches the local library for inventory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.12.0",
    "langchain-community>=0.3.27",
    "wikipedia>=1.4.0",
]
