[project]
name = "gemma-ollama-app-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.159.0",
    "google-auth>=2.37.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "pydantic-settings[yaml]>=2.7.1",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]
