[project]
name = "adk-web-extra-plugins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "google-adk[all,analytics,community]>=1.21.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true
