[project]
name = "course-creation-app"
version = "0.1.0"
description = "Course Creation Web App"
requires-python = ">=3.10,<3.14"
dependencies = [
    "uvicorn==0.41.*",
    "fastapi==0.135.*",
    "httpx==0.28.*",
    "httpx_sse==0.4.*",
    "google-genai==1.66.*",
    "google-cloud-logging==3.13.0",
    "opentelemetry-exporter-gcp-trace==1.11.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
